Fix contrast in footer (#804)

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -206,6 +206,10 @@ a > code {
   color: #0000EA !important;
 }
 
+footer a {
+  color: #fff !important;
+}
+
 p, li {
   color: #515151;
   a {
